--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>in.specmatic</groupId>
+            <artifactId>junit5-support</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
